@@ -1,0 +1,6 @@
+
+function googleTranslateElementInit() {
+	new google.translate.TranslateElement({
+		pageLanguage: 'en'
+	}, 'google_translate_element');
+}
