@@ -164,6 +164,14 @@ table#wp-calendar td {
 /*	min-height: 800px; */
 }
 
+body.signup .narrowcolumn, .mu_register {
+	color: #fff;
+}
+
+body.signup #column {
+	float: none;
+}
+
 .sidebar h2 {
 	border: solid 1px #000;
 	margin-bottom: 5px;
